Regression: Some Attributes corrupted for Shape Key and mode switching #104826

Closed
opened 2023-02-16 16:50:12 +01:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.1.12-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-16 14:27, hash: 2ccb820c7e1d
Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-14 02:26, hash: 46c34ba1f666

Short description of error

I noticed on various files that vertex creases and sculpt mode masks kept getting randomized whenever I switch modes or add new geometry.
I was only able to reproduce this when using shapekeys on an object and it doesn't consistently show itself.

image

image

Exact steps for others to reproduce the error

  • Add a sphere
  • Add a base and another shape key
  • Enter edit mode and mark some vertices as Mean Vertex Crease in the sidebar
  • Enter sculpt mode and mask some vertices
  • Then proceed to cycle between Edit Mode -> Sculpt Mode repeatadly and observe the results
**System Information** Operating system: Linux-6.1.12-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-16 14:27, hash: `2ccb820c7e1d` Worked: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-14 02:26, hash: `46c34ba1f666` **Short description of error** I noticed on various files that vertex creases and sculpt mode masks kept getting randomized whenever I switch modes or add new geometry. I was only able to reproduce this when using shapekeys on an object and it doesn't consistently show itself. ![image](/attachments/44fa6543-07ee-4bb8-bf1d-2c5bbadbb43c) ![image](/attachments/2e9175db-d3b4-40df-bd11-a19ee5b3948a) **Exact steps for others to reproduce the error** - Add a sphere - Add a base and another shape key - Enter edit mode and mark some vertices as `Mean Vertex Crease` in the sidebar - Enter sculpt mode and mask some vertices - Then proceed to cycle between `Edit Mode` -> `Sculpt Mode` repeatadly and observe the results
Julien Kaspar added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-16 16:50:12 +01:00
Iliya Katushenock added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-16 17:16:54 +01:00
Iliya Katushenock changed title from Attributes are randomized when using shape keys to Regression: Some Attributes corrupted for Shape Key and Edit mode switching 2023-02-16 17:33:46 +01:00

If you simply add the Mean Vertex Crease attribute to the vertices, then simply toggling will edit the mode and the object mode will corrupt them.
I'm not sure if this effect is the same as the sculpt/mask, although the description is similar (with mode specifics).
The common part is having a shape key.

This is regression 3.6.
Other attributes (named. from geometry node) are not affected.
Debugging does not see this.

If you simply add the `Mean Vertex Crease` attribute to the vertices, then simply toggling will edit the mode and the object mode will corrupt them. I'm not sure if this effect is the same as the sculpt/mask, although the description is similar (with mode specifics). The common part is having a shape key. This is regression 3.6. Other attributes (named. from geometry node) are not affected. Debugging does not see this.
Iliya Katushenock added
Priority
High
and removed
Priority
Normal
labels 2023-02-16 17:35:39 +01:00
Iliya Katushenock changed title from Regression: Some Attributes corrupted for Shape Key and Edit mode switching to Regression: Some Attributes corrupted for Shape Key and mode switching 2023-02-16 17:38:35 +01:00
Hans Goudey added
Module
Modeling
and removed
Module
Sculpt, Paint & Texture
labels 2023-02-16 22:21:57 +01:00
Hans Goudey added this to the Modeling project 2023-02-16 22:22:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-16 23:00:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104826
No description provided.