Fix #104826: Mesh to BMesh with shape keys can corrupt layers

The custom data layer mappings from dfacaf4f409287baa1c8 were created
*before* the BMesh shape key layers were added, invalidating the BMesh
data offsets they stored. Fix by creating the mappings after all layers
have been created.